[gd_scene load_steps=4 format=3 uid="uid://dw76gxraw6ywb"]

[ext_resource type="Script" uid="uid://b2bv24cf0di7l" path="res://testing/pokemondebug.gd" id="1_ncfsa"]
[ext_resource type="Texture2D" uid="uid://bk73fhioq7lc0" path="res://Core/Graphics/Pokemon/Gen1/Front/PIKACHU.png" id="2_hcpu6"]
[ext_resource type="Theme" uid="uid://df1kxsq56qko5" path="res://Libraries/Fonts/dialog.tres" id="3_hk8j2"]

[node name="PokeDebug" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ncfsa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PokeData" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PokeSprite" type="TextureRect" parent="VBoxContainer/PokeData"]
layout_mode = 2
texture = ExtResource("2_hcpu6")
expand_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/PokeData/PokeSprite"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/PokeData/PokeSprite/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Level:"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PokeData"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/PokeData/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_icon = true

[node name="Button2" type="Button" parent="VBoxContainer/PokeData/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_icon = true

[node name="Button3" type="Button" parent="VBoxContainer/PokeData/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_icon = true

[node name="Button4" type="Button" parent="VBoxContainer/PokeData/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_icon = true

[node name="Button5" type="Button" parent="VBoxContainer/PokeData/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_icon = true

[node name="Button6" type="Button" parent="VBoxContainer/PokeData/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_icon = true

[node name="Moves" type="VBoxContainer" parent="VBoxContainer/PokeData"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Move1" type="Label" parent="VBoxContainer/PokeData/Moves"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_hk8j2")
theme_override_font_sizes/font_size = 64
text = "Move1"

[node name="Move2" type="Label" parent="VBoxContainer/PokeData/Moves"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_hk8j2")
theme_override_font_sizes/font_size = 64
text = "Move1"

[node name="Move3" type="Label" parent="VBoxContainer/PokeData/Moves"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_hk8j2")
theme_override_font_sizes/font_size = 64
text = "Move1"

[node name="Move4" type="Label" parent="VBoxContainer/PokeData/Moves"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_hk8j2")
theme_override_font_sizes/font_size = 64
text = "Move1"

[node name="Actions" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelUp" type="Button" parent="VBoxContainer/Actions/Panel"]
layout_mode = 2
offset_left = 24.0
offset_top = 36.0
offset_right = 248.0
offset_bottom = 140.0
text = "Level Up"

[node name="FullExp" type="Button" parent="VBoxContainer/Actions/Panel"]
layout_mode = 2
offset_left = 272.0
offset_top = 36.0
offset_right = 496.0
offset_bottom = 140.0
text = "Full exp"

[connection signal="pressed" from="VBoxContainer/PokeData/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PokeData/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/PokeData/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/PokeData/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/PokeData/VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="VBoxContainer/PokeData/VBoxContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/Panel/LevelUp" to="." method="_on_level_up_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/Panel/FullExp" to="." method="_on_full_exp_pressed"]
